--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />  
     <title>Test page for zhongart.js</title>
-    <script type="text/javascript" src="./zhongart/zhongart.js"></script>
-    <script type="text/javascript" src="./processing-1.3.6.min.js"></script>
+    <script src="./zhongart/zhongart.js"></script>
+    <script src="./processing-1.3.6.min.js"></script>
 </head>
 <body>
 </body>
