--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />  
     <title>Test page for zhongart.js</title>
     <script src="./zhongart/zhongart.js"></script>
-    <script src="./processing-1.3.6.min.js"></script>
+    <script src="./processing-1.3.6.js"></script>
 </head>
 <body>
 </body>
