--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <title>Test page for zhongart.js</title>
     <script src="./zhongart/zhongart.js"></script>
     <script src="./processing-1.3.6.js"></script>
+    <script src="./jquery-1.7.1.js"></script>
 </head>
 <body>
 </body>
