--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <script src="./zhongart/zhongart.js"></script>
     <script src="./processing-1.3.6.js"></script>
     <script src="./jquery-1.7.1.js"></script>
+    <link rel="stylesheet" href="./test.css">
 </head>
 <body>
 
