--- a/test.html
+++ b/test.html
@@ -11,6 +11,13 @@
 <body>
     <div>
         <input type="file" id="pic_local" name="pic_local" />
+        <output id="pic"><output />
     </div>
+
+    <script>
+        $(document).ready(function() {
+            
+        });
+    </script>
 </body>
 </html>
