--- a/test.html
+++ b/test.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div>
-        <input type="file" id="pic_local" name="pic_local" />
-        <output id="pic"><output />
+        <input type="file" id="upload_zone" name="upload_zone" />
+        <output id="upload_pic"><output />
     </div>
+    
+    <div id="drop_zone">Drop pic test</div>
+    <output id="drop_pic"></output>
 
     <script>
         $(document).ready(function() {
@@ -21,3 +24,4 @@
     </script>
 </body>
 </html>
+
