get more thingfs done

--- a/test.html
+++ b/test.html
@@ -17,6 +17,9 @@
     <div id="drop_zone">Drop pic test</div>
     <output id="drop_pic"></output>
 
+    <div id="preview_pic">
+    </div>
+
     <script>
         $(document).ready(function() {
             
