--- a/test.html
+++ b/test.html
@@ -3,9 +3,10 @@
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />  
     <title>Test page for zhongart.js</title>
-    <script src="./zhongart/zhongart.js"></script>
     <script src="./processing-1.3.6.js"></script>
     <script src="./jquery-1.7.1.js"></script>
+    <script src="./zhongart/zhongart.js"></script>
+    <script src="./test.js"></script>
     <link rel="stylesheet" href="./test.css">
 </head>
 <body>
