--- a/test.html
+++ b/test.html
@@ -1,31 +1,32 @@
 <!doctype html>
 <html>
-<head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />  
-    <title>Test page for zhongart.js</title>
-    <script src="./processing-1.3.6.js"></script>
-    <script src="./jquery-1.7.1.js"></script>
-    <script src="./zhongart/zhongart.js"></script>
-    <script src="./test.js"></script>
-    <link rel="stylesheet" href="./test.css">
-</head>
-<body>
-    <div>
-        <input type="file" id="upload_zone" name="upload_zone" />
-        <output id="upload_pic"><output />
-    </div>
-    
-    <div id="drop_zone">Drop pic test</div>
-    <output id="drop_pic"></output>
+    <head>
+        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+        <title>Test page for zhongart.js</title>
+        <script src="./processing-1.3.6.js"></script>
+        <script src="./jquery-1.7.1.js"></script>
+        <script src="./zhongart/zhongart.js"></script>
+        <script src="./test.js"></script>
+        <link rel="stylesheet" href="./test.css">
+    </head>
+    <body>
+        <div>
+            <input type="file" id="upload_zone" name="upload_zone" />
+            <output id="upload_pic"></output >
+        </div>
 
-    <div id="preview_pic">
-    </div>
+        <div id="drop_zone">
+            Drop pic test
+        </div>
+        <output id="drop_pic"></output>
 
-    <script>
-        $(document).ready(function() {
-            
-        });
-    </script>
-</body>
+        <div id="preview_pic"></div>
+
+        <script>
+            $(document).ready(function() {
+
+            });
+        </script>
+    </body>
 </html>
 
